--- a/miao/mi/mi.css
+++ b/miao/mi/mi.css
@@ -51,3 +51,50 @@ ul.right li:nth-child(3)::before
   color: #424242;
 }
 
+li.download a div {
+  display: none;
+}
+li.download a {
+  position: relative;
+}
+li.download a:hover div {
+  display: block;
+  width: 124px;
+  height: 148px;
+  background-color: white;
+  position: absolute;
+  top: 100%;
+  left: -39px;
+  box-shadow: 0px 1px 5px #aaa;
+}
+
+li.download a:hover div img {
+  display: block;
+  width: 90px;
+  height: 90px;
+  margin: 18px auto 0px auto;
+}
+
+li.download a:hover div img + span {
+  display: block;
+  width: 124px;
+  height: 28px;
+  margin: 0px;
+  text-align: center;
+  color: black;
+  font-size: 16px;
+}
+
+li.download a:hover::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  width: 0;
+  height: 0;
+  margin-left: -8px;
+  border-width: 10px;
+  border-style: solid;
+  border-color: rgba(0,0,0,0) rgba(0,0,0,0) #fff;
+}
+
