--- a/miao/mi/mi.css
+++ b/miao/mi/mi.css
@@ -1,9 +1,11 @@
 body, html {
+  width: 100%;
   margin: 0px;
   padding: 0px;
 }
 
 .a {
+  min-width: 1226px;
   xwidth: 100%;
   height: 40px;
   background-color: #333;
@@ -90,11 +92,10 @@ li.download a:hover::before {
   position: absolute;
   bottom: 0;
   left: 50%;
-  width: 0;
-  height: 0;
-  margin-left: -8px;
-  border-width: 10px;
-  border-style: solid;
-  border-color: rgba(0,0,0,0) rgba(0,0,0,0) #fff;
+  width: 0px;
+  height: 0px;
+  border: 10px solid;
+  margin-left: -9px;
+  border-color: rgba(0, 0, 0, 0) rgba(0, 0, 0, 0) white rgba(0, 0, 0, 0);
 }
 
